@@ -23,6 +23,11 @@
 
 2009-07-20  Jakub Jelinek  <jakub@redhat.com>
 
+	* gcc.dg/builtin-object-size-6.c: Adjust expected values. 
+	* gcc.dg/builtin-object-size-8.c: New test. 
+	* g++.dg/ext/builtin-object-size1.C: Adjust expected values.
+	* g++.dg/ext/builtin-object-size2.C: Likewise.
+
 	PR tree-optimization/40792
 	* gcc.dg/pr40792.c: New test.
 
